[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Final.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Background/background_arlivre.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/f.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/c.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy/caracol_run0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/moeda.png" type="Texture" id=6]
[ext_resource path="res://Font/Gameplay.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sprites/UI/botao.png" type="Texture" id=8]
[ext_resource path="res://Font/game_over.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_size = 3
outline_color = Color( 1, 0.4, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 160, 64 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 160, 64 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 160, 64 )

[sub_resource type="DynamicFont" id=5]
size = 62
outline_size = 3
outline_color = Color( 1, 0.376471, 0.0392157, 1 )
font_data = ExtResource( 9 )

[node name="Final" type="Node"]
script = ExtResource( 1 )

[node name="Fundo" type="Sprite" parent="."]
scale = Vector2( 4.4329, 9.65079 )
texture = ExtResource( 2 )
centered = false

[node name="Resultado" type="Sprite" parent="."]
position = Vector2( 512, 288 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="Ponto" type="Sprite" parent="."]
position = Vector2( 384, 256 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Ponto2" type="Sprite" parent="."]
position = Vector2( 512, 256 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Ponto3" type="Sprite" parent="."]
position = Vector2( 640, 256 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Caracol" type="Sprite" parent="."]
position = Vector2( 402, 364 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="Moeda" type="Sprite" parent="."]
position = Vector2( 560.862, 367.926 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 449.0
margin_top = 352.0
margin_right = 467.0
margin_bottom = 383.0
custom_fonts/font = SubResource( 1 )
text = "x"

[node name="Label3" type="Label" parent="."]
margin_left = 384.0
margin_top = 157.0
margin_right = 637.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 1 )
text = "Fase completada!"

[node name="Label2" type="Label" parent="."]
margin_left = 594.0
margin_top = 352.0
margin_right = 612.0
margin_bottom = 383.0
custom_fonts/font = SubResource( 1 )
text = "x"

[node name="TotalCaracol" type="Label" parent="."]
margin_left = 483.5
margin_top = 352.0
margin_right = 501.5
margin_bottom = 383.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TotalMoeda" type="Label" parent="."]
margin_left = 628.5
margin_top = 352.0
margin_right = 646.5
margin_bottom = 383.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Replay" type="Button" parent="."]
margin_left = 449.0
margin_top = 480.0
margin_right = 577.0
margin_bottom = 544.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Replay"

[connection signal="pressed" from="Replay" to="." method="_on_Replay_pressed"]
